Fix image overlap in ricapar.css * The box shots on the "home" pages for games were overlapping the next   sections.

--- a/content/css/ricapar.css
+++ b/content/css/ricapar.css
@@ -78,6 +78,10 @@
         padding: 5px 0 !important;
     }
 
+    .pod {
+        clear: both;
+    }
+
     /* Links */
 
     a {
